tests/build/impl_ui_node_macro/fail/delegate_expr_no_children_field.stderr
error[E0609]: no field `children` on type `&mut Node`
 --> $DIR/delegate_expr_no_children_field.rs:5:16
  |
5 | #[impl_ui_node(children)]
  |                ^^^^^^^^ unknown field

error[E0609]: no field `children` on type `&Node`
 --> $DIR/delegate_expr_no_children_field.rs:5:16
  |
5 | #[impl_ui_node(children)]
  |                ^^^^^^^^ unknown field
